<resources>
    <string name="app_name">Proyecto</string>
    <string name="title_activity_menu_lateral">MenuLateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="Sing_in">Sign In</string>
    <string name="Hell">¡HELL</string>
    <string name="o">O</string>
    <string name="oo">¡</string>
    <string name="PleaseSignIn">Please, sign in to continue</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="InfoLogIn">Don’t have an account?</string>
    <string name="SingUp">Sing Up</string>

    <string name="SingUp1">Sing </string>
    <string name="SingUp1.1">U</string>
    <string name="SingUp1.2">p</string>
    <string name="SingUpInfo">Create an account, so you can order you favorite food even faster</string>

    <string name="SingUpName">Name</string>
    <string name="SingUpLastName">Last Name</string>
    <string name="SingUpEmail">Email</string>
    <string name="SingUpPassword">Password</string>
    <string name="SingUpConfirmPassword">Confirm password</string>

    <string name="Total">Total: </string>
    <string name="Pay">¡Pay! </string>

    <string name="Fund">Fund </string>
    <string name="FundButton">¡Fund! </string>
    <string name="Fund1.1">A</string>
    <string name="Fund1.2">ccount</string>
    <string name="FundText1">You must add money to your account, otherwise you will not be allowed to buy</string>
    <string name="Amount">Amount to enter</string>
    <string name="Available">Available balance: </string>


    <string name="textHomeNameO">O</string>
    <string name="textHomeName">rder</string>
    <string name="textHome1"> your food in a </string>
    <string name="textHome1.2">simple tap!</string>
    <string name="textHome2">Our mission is make simple, fastest and create a better experience with your customers </string>
    <string name="OrderNow">¡Order now!</string>
    <string name="textHome3">it gona be avialble </string>
    <string name="textHome3.1">around the world, and now you’re maken a change</string>

    <string name="Send">Send</string>
    <string name="Adress1">A</string>
    <string name="Adress1.1">dd</string>
    <string name="Adress1.2">ress</string>
    <string name="SelectOrder">Select your order</string>
    <string name="Street">Street</string>
    <string name="Cologne">Cologne</string>
    <string name="City">City</string>
    <string name="ZipCode">Zip code</string>
    <string name="SendInfo">Tell us where you want us to send your food.</string>

    <string name="LogOut">Log out</string>
    <string name="LogOutInfo">Thank you for using ¡Order. Until next time!</string>



    <string name="menu_gallery">Fund Account</string>
    <string name="menu_slideshow">Products</string>
</resources>