<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/button"
        style="@style/MiEstiloDeBoton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/poppins_medium"
        android:onClick="btnIngresar"
        android:padding="15dp"
        android:text="@string/Sing_in"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContrasenaLogin" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="65dp"
        android:layout_height="29dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_bold"
        android:padding="0dp"
        android:text="@string/Hell"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="10dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="153dp"
        android:fontFamily="@font/poppins_bold"
        android:padding="0dp"
        android:text="@string/oo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_bold"
        android:padding="0dp"
        android:text="@string/o"
        android:textAlignment="center"
        android:textColor="@color/orangeMain"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/etEmaiLogin"
        style="@style/InputGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/Email"
        android:inputType="text"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="216dp"
        android:layout_height="23dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_light"
        android:padding="0dp"
        android:text="@string/InfoLogIn"
        android:textColor="@color/blueMain"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="75dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:fontFamily="@font/poppins_bold"
        android:onClick="registrarse"
        android:text="@string/SingUp"
        android:textColor="@color/orangeMain"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <EditText
        android:id="@+id/etContrasenaLogin"
        style="@style/InputGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/Password"
        android:inputType="text"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmaiLogin" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="183dp"
        android:layout_height="53dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="114dp"
        android:fontFamily="@font/poppins_light"
        android:padding="0dp"
        android:text="@string/PleaseSignIn"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>