<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyecto.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.proyecto.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.proyecto.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/envioFragment"
        android:name="com.example.proyecto.ui.envio.EnvioFragment"
        android:label="Send"
        tools:layout="@layout/fragment_envio" />
    <fragment
        android:id="@+id/historialFragment"
        android:name="com.example.proyecto.ui.historial.HistorialFragment"
        android:label="Historial"
        tools:layout="@layout/fragment_historial" />
    <fragment
        android:id="@+id/salidaFragment"
        android:name="com.example.proyecto.ui.main.SalidaFragment"
        android:label="fragment_salida"
        tools:layout="@layout/fragment_salida" />
    <fragment
        android:id="@+id/fileFragment"
        android:name="com.example.proyecto.ui.file.FileFragment"
        android:label="fragment_file"
        tools:layout="@layout/fragment_file" />
</navigation>